kubernetes/apps/security/authelia/app/reference_grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: authelia-reference-all
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: productivity
  to:
    - group: ""
      kind: Service
      name: authelia
