kubernetes/apps/security/authelia/app/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-internal
spec:
  hostnames:
    - "auth.internal.${SECRET_DOMAIN}"
  parentRefs:
    - name: internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: authelia
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: "Cache-Control"
                value: "no-store"
              - name: "Pragma"
                value: "no-cache"
              - name: "X-Frame-Options"
                value: "SAMEORIGIN"
              - name: "X-XSS-Protection"
                value: "1; mode=block"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authelia-external
spec:
  hostnames:
    - "auth.${SECRET_PUBLIC_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: authelia
          port: 80
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: "Cache-Control"
                value: "no-store"
              - name: "Pragma"
                value: "no-cache"
              - name: "X-Frame-Options"
                value: "SAMEORIGIN"
              - name: "X-XSS-Protection"
                value: "1; mode=block"
